fix the table td width too big even the data just a short number

--- a/Client/public/css/common-table.css
+++ b/Client/public/css/common-table.css
@@ -7,7 +7,7 @@
     width: 100%;
     box-sizing: border-box;
     /*border: 2px solid #aaaaff;*/
-    table-layout: fixed;
+    table-layout: automatic;
     /*overflow-x: scroll;*/
     max-width: inherit;
     white-space: nowrap;
